--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-
+    
     <meta charset="UTF-8">
     <title>Наша Свадьба</title>
     <link rel="stylesheet" href="css/style.css"> </link>
@@ -14,14 +14,12 @@
     body {
      background-image: url(img/a.png);
      background-repeat: no-repeat;
-     background-size: 100% 135%;
+     background-size: 100% 195%;
     }
 </style>
 
 
 <body>
-
-    <h3><img src="img/ma.png" width="700px" height="1000"></h3>
 
     <section id="n1">  
 
@@ -36,6 +34,8 @@
                 с нами радость этого<br>
                 незабываемого дня<br>
             </p> 
+
+            <img src="img/ma.png">
 
             <h2>Ждем Вас!<br> 
 
@@ -58,9 +58,10 @@
             следующей палитры<br>
                
             </p> 
-        </h5>
 
-        <h9>⠀<br>
+            <img src="img/pal.png">
+
+        </h5>
 
             <p>
 
@@ -69,11 +70,8 @@
                 вас формате до 1 августа 2023
 
             </p>
-        </h9>
 
     </section>
-
-    <h6><img src="img/pal.png" width="500px" height="95"></h6>
 
 </body>
 
